--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,17 +1,30 @@
 workflows:
   ios:
-    name: Build iOS app without Xcode project
+    name: Build iOS app
     max_build_duration: 60
     environment:
-      xcode: latest
+      xcode: latest  # Указываем, что используем Xcode для сборки
     scripts:
       - name: Install dependencies
         script: |
-          # Установки зависимостей для Swift (если есть)
+          # Установки зависимостей с использованием CocoaPods, если они есть
+          # Если у вас используется CocoaPods, вы можете раскомментировать и добавить команду установки зависимостей:
+          # pod install
           echo "No dependencies for Swift project"
       - name: Build the app
         script: |
-          # Сборка приложения с использованием Swift команд
-          swift build
+          # Сборка проекта с использованием Xcode и создания архива .ipa
+          xcodebuild clean archive \
+            -workspace "MyManicureApp.xcworkspace" \
+            -scheme "MyManicureApp" \
+            -sdk iphoneos \
+            -archivePath "$PWD/build/MyManicureApp.xcarchive"
+      - name: Export IPA
+        script: |
+          # Экспорт .ipa файла из .xcarchive
+          xcodebuild -exportArchive \
+            -archivePath "$PWD/build/MyManicureApp.xcarchive" \
+            -exportOptionsPlist "$PWD/MyManicureApp/ExportOptions.plist" \
+            -exportPath "$PWD/build/ios/iphoneos"
     artifacts:
-      - build/ios/iphoneos/*.ipa
+      - build/ios/iphoneos/*.ipa  # Указываем путь для артефактов
