--- a/.github/workflows/xcode-build.yml
+++ b/.github/workflows/xcode-build.yml
@@ -34,12 +34,12 @@ jobs:
       # 4. Выполняем сборку проекта
       - name: Build with xcodebuild
         run: |
-          xcodebuild clean build -project my-swift-project.xcodeproj -scheme my-swift-project -sdk iphoneos -destination 'platform=iOS Simulator,name=iPhone 14'
+          xcodebuild clean build -project my-swift-project/my-swift-project.xcodeproj -scheme my-swift-project -sdk iphoneos -destination 'platform=iOS Simulator,name=iPhone 14'
 
       # 5. Архивируем проект (если нужно)
       - name: Archive with xcodebuild
         run: |
-          xcodebuild archive -project my-swift-project.xcodeproj -scheme my-swift-project -sdk iphoneos -archivePath $PWD/build/my-swift-project.xcarchive
+          xcodebuild archive -project my-swift-project/my-swift-project.xcodeproj -scheme my-swift-project -sdk iphoneos -archivePath $PWD/build/my-swift-project.xcarchive
 
       # 6. Загружаем артефакты сборки
       - name: Upload IPA as build artifact
